--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
   "license": "ISC",
   "dependencies": {
     "active-win": "^8.2.1",
-    "chrome-remote-interface": "^0.33.0",
-    "nodemon": "^3.1.0",
-    "puppeteer": "^22.5.0"
+    "chrome-remote-interface": "^0.33.0"
   }
 }
