--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "active-win": "^8.2.1",
     "chrome-remote-interface": "^0.33.0",
     "firefox-profile": "^4.5.0",
-    "puppeteer": "^22.5.0"
+    "puppeteer": "^22.5.0",
+    "puppeteer-core": "^22.5.0",
+    "selenium-webdriver": "^4.18.1"
   }
 }
